--- a/frontend/assets/variables.scss
+++ b/frontend/assets/variables.scss
@@ -2,3 +2,28 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+// @import '~vuetify/src/styles/styles.sass';
+
+// assets/variables.scss
+
+
+//Finally these changes are apply (not from Nuxt config)
+$material-dark: (
+
+  'background': #10103d,         // Background for the entire app (v-main, v-app)
+  'surface': #10154d,           // Used for cards, sheets, dialogs , Header Tag
+  'primary': #10154d,           // Primary brand color (toolbars, buttons, highlights)
+  'secondary': #03DAC6,          // Secondary accent (chips, smaller highlights)
+  'accent': #FF4081,              // Accent color (optional highlight color)
+  'error': #CF6679,             // Error color (e.g. inputs, alerts)
+  'info': #2196F3,               // Informational color (info alerts, chips)
+  'success': #4CAF50,            // Success color (green)
+  'warning': #FB8C00,           // Warning color (orange)
+  'on-primary': #000000,         // Text color used on top of `primary`
+  'on-secondary': #000000,       // Text color used on top of `secondary`
+  'on-surface': #FFFFFF,         // Text color used on top of surfaces/backgrounds
+);
+
+
+
+
