--- a/frontend/assets/darktheme.css
+++ b/frontend/assets/darktheme.css
@@ -1,3 +1,203 @@
 .theme--dark.v-card {
   background-color: #10154d!important;
 }
+
+.theme--dark.v-data-table
+{
+  background-color: #10154d !important;
+
+}
+
+.theme--dark.v-data-table.v-data-table--fixed-header thead th
+{
+  background-color: #10154d !important;
+
+}
+
+.theme--dark.v-sheet
+{
+  background-color: #10154d !important;
+
+}
+.theme--dark.v-navigation-drawer
+{
+   background-color: #10154d !important;
+}
+
+.theme--dark.v-tabs > .v-tabs-bar
+{
+   background-color: #10154d !important;
+
+}
+.theme--dark.v-bottom-navigation .v-btn--active {
+  background: rgb(105, 70, 221);
+  color: #fff !important;
+}
+
+.theme--dark.v-list-item:not(.v-list-item--active):not(.v-list-item--disabled) {
+  color: #9aa9b9;
+}
+.theme--dark.v-list-item:not(.v-list-item--active):not(.v-list-item--disabled)
+  i {
+  color: #9aa9b9;
+}
+
+.v-sheet.v-snack__wrapper
+{
+background: rgb(255, 255, 255)!important;
+color:#000!important;
+}
+
+  .theme--light.v-application
+{
+   background-color: var(--v-background-base);
+}
+
+.theme--light.v-app-bar.v-toolbar.v-sheet
+{
+ background-color: var(--v-background-base);
+}
+/*
+:root {
+    --v-anchor-base: #6946dd;
+    --v-primary-base: #6946dd;
+    --v-primary-lighten5: #ffcaff;
+    --v-primary-lighten4: #e1afff;
+    --v-primary-lighten3: #c393ff;
+    --v-primary-lighten2: #a579ff;
+    --v-primary-lighten1: #875ffa;
+    --v-primary-darken1: #492dc0;
+    --v-primary-darken2: #2314a5;
+    --v-primary-darken3: #000089;
+    --v-primary-darken4: #00006f;
+    --v-secondary-base: #242424;
+    --v-secondary-lighten5: #9c9c9c;
+    --v-secondary-lighten4: #828282;
+    --v-secondary-lighten3: #686868;
+    --v-secondary-lighten2: #505050;
+    --v-secondary-lighten1: #3a3a3a;
+    --v-secondary-darken1: #0f0f0f;
+    --v-secondary-darken2: #000000;
+    --v-secondary-darken3: #000000;
+    --v-secondary-darken4: #000000;
+    --v-accent-base: #d8363a;
+    --v-accent-lighten5: #ffc7b8;
+    --v-accent-lighten4: #ffaa9d;
+    --v-accent-lighten3: #ff8e83;
+    --v-accent-lighten2: #ff716a;
+    --v-accent-lighten1: #f85451;
+    --v-accent-darken1: #b80c24;
+    --v-accent-darken2: #99000f;
+    --v-accent-darken3: #7a0000;
+    --v-accent-darken4: #5e0000;
+    --v-error-base: #dd2c00;
+    --v-error-lighten5: #ffc187;
+    --v-error-lighten4: #ffa46c;
+    --v-error-lighten3: #ff8753;
+    --v-error-lighten2: #ff6a39;
+    --v-error-lighten1: #fe4d1f;
+    --v-error-darken1: #bc0000;
+    --v-error-darken2: #9d0000;
+    --v-error-darken3: #7f0000;
+    --v-error-darken4: #630000;
+    --v-info-base: #26a69a;
+    --v-info-lighten5: #c3ffff;
+    --v-info-lighten4: #a5ffff;
+    --v-info-lighten3: #87fbed;
+    --v-info-lighten2: #6aded0;
+    --v-info-lighten1: #4bc2b5;
+    --v-info-darken1: #008b80;
+    --v-info-darken2: #007167;
+    --v-info-darken3: #00584f;
+    --v-info-darken4: #004038;
+    --v-success-base: #00e676;
+    --v-success-lighten5: #ceffff;
+    --v-success-lighten4: #afffe4;
+    --v-success-lighten3: #8fffc8;
+    --v-success-lighten2: #6dffac;
+    --v-success-lighten1: #47ff91;
+    --v-success-darken1: #00c95c;
+    --v-success-darken2: #00ad43;
+    --v-success-darken3: #009129;
+    --v-success-darken4: #00760d;
+    --v-warning-base: #ffc107;
+    --v-warning-lighten5: #ffffae;
+    --v-warning-lighten4: #ffff91;
+    --v-warning-lighten3: #ffff74;
+    --v-warning-lighten2: #fff956;
+    --v-warning-lighten1: #ffdd37;
+    --v-warning-darken1: #e0a600;
+    --v-warning-darken2: #c18c00;
+    --v-warning-darken3: #a27300;
+    --v-warning-darken4: #855a00;
+    --v-background-base: #34444c;
+    --v-background-lighten5: #b1c3cd;
+    --v-background-lighten4: #96a8b1;
+    --v-background-lighten3: #7c8e97;
+    --v-background-lighten2: #63747d;
+    --v-background-lighten1: #4b5b64;
+    --v-background-darken1: #1e2e35;
+    --v-background-darken2: #081920;
+    --v-background-darken3: #000009;
+    --v-background-darken4: #000000;
+    --v-main_bg-base: #ecf0f4;
+    --v-main_bg-lighten5: #ffffff;
+    --v-main_bg-lighten4: #ffffff;
+    --v-main_bg-lighten3: #ffffff;
+    --v-main_bg-lighten2: #ffffff;
+    --v-main_bg-lighten1: #ffffff;
+    --v-main_bg-darken1: #d0d4d8;
+    --v-main_bg-darken2: #b4b8bc;
+    --v-main_bg-darken3: #999da1;
+    --v-main_bg-darken4: #7f8387;
+    --v-violet-base: #6946dd;
+    --v-violet-lighten5: #ffcaff;
+    --v-violet-lighten4: #e1afff;
+    --v-violet-lighten3: #c393ff;
+    --v-violet-lighten2: #a579ff;
+    --v-violet-lighten1: #875ffa;
+    --v-violet-darken1: #492dc0;
+    --v-violet-darken2: #2314a5;
+    --v-violet-darken3: #000089;
+    --v-violet-darken4: #00006f;
+    --v-popup_background-base: #ecf0f4;
+    --v-popup_background-lighten5: #ffffff;
+    --v-popup_background-lighten4: #ffffff;
+    --v-popup_background-lighten3: #ffffff;
+    --v-popup_background-lighten2: #ffffff;
+    --v-popup_background-lighten1: #ffffff;
+    --v-popup_background-darken1: #d0d4d8;
+    --v-popup_background-darken2: #b4b8bc;
+    --v-popup_background-darken3: #999da1;
+    --v-popup_background-darken4: #7f8387;
+    --v-on-surface-base: #000000;
+    --v-on-surface-lighten5: #777777;
+    --v-on-surface-lighten4: #5e5e5e;
+    --v-on-surface-lighten3: #474747;
+    --v-on-surface-lighten2: #303030;
+    --v-on-surface-lighten1: #1b1b1b;
+    --v-on-surface-darken1: #000000;
+    --v-on-surface-darken2: #000000;
+    --v-on-surface-darken3: #000000;
+    --v-on-surface-darken4: #000000;
+    --v-default-font-color-base: #000000;
+    --v-default-font-color-lighten5: #777777;
+    --v-default-font-color-lighten4: #5e5e5e;
+    --v-default-font-color-lighten3: #474747;
+    --v-default-font-color-lighten2: #303030;
+    --v-default-font-color-lighten1: #1b1b1b;
+    --v-default-font-color-darken1: #000000;
+    --v-default-font-color-darken2: #000000;
+    --v-default-font-color-darken3: #000000;
+    --v-default-font-color-darken4: #000000;
+    --v-default-font-color-reverse-base: #ffffff;
+    --v-default-font-color-reverse-lighten5: #ffffff;
+    --v-default-font-color-reverse-lighten4: #ffffff;
+    --v-default-font-color-reverse-lighten3: #ffffff;
+    --v-default-font-color-reverse-lighten2: #ffffff;
+    --v-default-font-color-reverse-lighten1: #ffffff;
+    --v-default-font-color-reverse-darken1: #e2e2e2;
+    --v-default-font-color-reverse-darken2: #c6c6c6;
+    --v-default-font-color-reverse-darken3: #ababab;
+    --v-default-font-color-reverse-darken4: #919191;
+} */
