--- a/frontend/assets/darkchart.css
+++ b/frontend/assets/darkchart.css
@@ -7,6 +7,8 @@
   background-color: #10103d !important;
 }
 
+
+
   .dashboard-card {
   border-radius: 20px;
   padding: 30px;
@@ -20,7 +22,7 @@
 }
 
    .dashboard-card-small {
-  border-color: #20225d!important;
+  /* border-color: #20225d!important; */
 
   border-radius: 20px;
   padding: 30px;
@@ -38,7 +40,9 @@
   border-radius: 20px!important;
   padding: 30px!important;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1)!important;
-  background: linear-gradient(135deg, #7d66e5 0%, #0071bd 100%)!important;
+  /* background: linear-gradient(135deg, #7d66e5 0%, #0071bd 100%)!important; */
+  background: linear-gradient(135deg, #7d66e5 0%, #d45cb3 100%)!important;
+
   color: white!important;
   display: flex!important;
   flex-direction: column!important;
